--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -10,7 +10,7 @@
 ----------------------------------------------------------------------------------------
 */
 
-cleanup = true
+cleanup = false
 
 params {
     config_profile_name        = 'Full test profile'
